api-k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: api-app-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql # nome do svc do MySQL
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: init-db
          mountPath: /docker-entrypoint-initdb.d
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
      volumes:
      - name: mysql-data
        emptyDir: {}
      - name: init-db
        configMap:
          name: init-db-configmap
