api-k8s/alloy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
  namespace: api-app-go
  labels:
    app: alloy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
        - name: alloy
          image: grafana/alloy:v1.9.1
          args:
            - run
            - /etc/alloy/alloy.yaml
            - --storage.path=/var/lib/alloy/data
          ports:
            - containerPort: 12345
              name: http-metrics
          volumeMounts:
            - name: alloy-storage
              mountPath: /var/lib/alloy/data
            - name: alloy-config
              mountPath: /etc/alloy
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 473
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: alloy-storage
          emptyDir: {}
        - name: alloy-config
          configMap:
            name: alloy-config
---
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: api-app-go
spec:
  ports:
    - name: http-metrics
      protocol: TCP
      port: 12345
      targetPort: 12345
  selector:
    app: alloy
