api-k8s/grafana-e-tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: api-app-go
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.5.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: api-app-go
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: api-app-go
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.6.0
          args:
            - -config.file=/etc/tempo/tempo.yaml
          ports:
            - containerPort: 4317 # Porta para OTLP gRPC
            - containerPort: 4318 # Porta para OTLP HTTP
          volumeMounts:
            - name: tempo-storage
              mountPath: /var/tempo
            - name: tempo-config
              mountPath: /etc/tempo
              readOnly: true
      volumes:
        - name: tempo-storage
          emptyDir: {}
        - name: tempo-config
          configMap:
            name: tempo-config
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: api-app-go
spec:
  ports:
    - name: http # Nome obrigatório
      protocol: TCP
      port: 3200
      targetPort: 3200
    - name: grpc # Nome obrigatório
      protocol: TCP
      port: 4317
      targetPort: 4317
  selector:
    app: tempo
