api-k8s/ingress-grafana-stack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-stack-ingress
  namespace: api-app-go
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-web.local # Único que realmente está sendo usado ;)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: mimir.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir
                port:
                  number: 9009
    - host: alloy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12345
    - host: grafana-tempo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3200
    - host: pyroscope.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyroscope
                port:
                  number: 4040
