api-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: api-app-go
spec:
  ingressClassName: nginx
  rules:
  - host: inventory.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 10000
      - path: /metrics # Path exclusivo pro /metrics ser usado com o ingress
        pathType: Prefix
        backend:
          service:
            name: inventory-app-metrics-service # Nome do seu Service de métricas
            port:
              number: 2113                # Porta do Service de métricas
